--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@auth/core": "^0.34.2",
     "@convex-dev/auth": "^0.0.61",
     "@convex-dev/react-query": "^0.0.0-alpha.5",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.9.0",
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -20,6 +22,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
@@ -31,6 +34,7 @@
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
