--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.15.0",
+    "date-fns": "^4.1.0",
     "input-otp": "^1.2.4",
     "jotai": "^2.9.3",
     "lucide-react": "^0.436.0",
